--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Ascii Art RPG! HELL YEA!</title>
+    <style>
+    body {
+    font-family: 'Courier', sans-serif !important;
+    }
+    </style>
   </head>
 
   <!-- keep your content within body opening and closing tags -->
@@ -53,6 +58,7 @@
         <div class="col-8">
             <div class="card">
                 <div class="card-body" id="main_map">
+                    >
                     This is some text within a card body.
                 </div>
             </div>
