saving before huge huge change -
need to kill bootstrap. it's a bit to much

--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
        max-width: 75% !important;
     }
     </style>
-
   </head>
 
   <!-- keep your content within body opening and closing tags -->
   <body>
-      
       <!-- start nav bar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 <a class="navbar-brand" href="#">A computer game</a>
@@ -106,7 +104,7 @@
 
 </div>  <!-- close container -->
 
-
+<div id="debug"></div>
 
 
     <!-- Please don't touch anything below this line -->
