--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div id="footer">
-                Health: 100
+                Health: X
             </div>
         </div>
         <script src="start.js"></script>
