Added player backpack

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"> 
+
+        <meta charset="UTF-8">
     </head>
     <body>
         <div class="game">
@@ -20,8 +22,8 @@
                     Loading map...
                 </div>
 
-                <div id="stats_and_inventory_">
-                    Stats and inventory
+                <div id="stats">
+                    
                 </div>
             </div>
             <div id="footer">
