--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="game">
             <div class="game-board">
                 <div id="messages">
-                    Messages
+                    <strong>Messages</strong><br>
                 </div>
             
                 <div id="map">
