--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
                 </div>
 
                 <div id="stats">
-                    
+                    Loading statistics...
                 </div>
-            </div>
-            <div id="footer">
-                Health: X
             </div>
         </div>
         <script src="start.js"></script>
