--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 </div>
             </div>
         </div>
-        <script src="start.js"></script>
+        <script src="./scripts/game.js"></script>
+        <script src="./scripts/objects.js"></script>
+        <script src="./scripts/items.js"></script>
+        <script src="./scripts/start.js"></script>
     </body>
 </html>
