--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href="http://fonts.cdnfonts.com/css/death-font" rel="stylesheet"> <!-- Death Message Font -->
 
         <meta charset="UTF-8">
     </head>
