--- a/index.html
+++ b/index.html
@@ -22,14 +22,23 @@
                     Loading map...
                 </div>
 
-                <div id="stats">
-                    Loading statistics...
+                <div class="left">
+                    <div id="stats">
+                        Loading statistics...
+                    </div>
+                    <div class="recipes">
+                        <p class="recipes-title">Recipes</p>
+                        <div id="recipes-list">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <script src="./scripts/game.js"></script>
         <script src="./scripts/objects.js"></script>
         <script src="./scripts/items.js"></script>
+        <script src="./scripts/recipes.js"></script>
         <script src="./scripts/start.js"></script>
     </body>
 </html>
