--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         Loading statistics...
                     </div>
                     <div class="recipes">
-                        <p class="recipes-title">Recipes</p>
+                        <p class="recipes-title">Crafting</p>
                         <div id="recipes-list">
 
                         </div>
