--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     Loading map...
                 </div>
 
-                <div class="left">
+                <div class="right">
                     <div id="stats">
                         Loading statistics...
                     </div>
@@ -38,7 +38,6 @@
         <script src="./scripts/game.js"></script>
         <script src="./scripts/objects.js"></script>
         <script src="./scripts/items.js"></script>
-        <script src="./scripts/recipes.js"></script>
         <script src="./scripts/start.js"></script>
     </body>
 </html>
