--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
         </div>
         <script src="./scripts/game.js"></script>
+        <script src="./scripts/achievements.js"></script>
         <script src="./scripts/objects.js"></script>
         <script src="./scripts/items.js"></script>
         <script src="./scripts/start.js"></script>
