--- a/index.html
+++ b/index.html
@@ -16,23 +16,26 @@
         <div class="game">
             <div class="game-board">
                 <div id="messages">
-                    <strong>Messages</strong><br>
+                    <p class="tab-header">Messages</p>
                 </div>
             
                 <div id="map">
                     Loading map...
                 </div>
 
-                <div class="right">
+                <div class="stats-tab">
                     <div id="stats">
                         Loading statistics...
                     </div>
                     <div class="recipes">
-                        <p class="recipes-title">Crafting</p>
+                        <p class="tab-header">Recipes</p>
                         <div id="recipes-list">
 
                         </div>
                     </div>
+                </div>
+                <div class="inventory-tab">
+
                 </div>
             </div>
         </div>
