Updated scalability and made it work

--- a/index.html
+++ b/index.html
@@ -6,32 +6,11 @@
 
         <!-- Ubuntu font is the best change my mind -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet"> 
-    <link href="http://fonts.cdnfonts.com/css/death-font" rel="stylesheet"> <!-- Death Message Font -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet"> 
+        <link href="http://fonts.cdnfonts.com/css/death-font" rel="stylesheet"> <!-- Death Message Font -->
 
         <meta charset="UTF-8">
-
-        <!-- Script for dragging and dropping equippment -->
-        <script>
-            function allowDrop(ev) {
-              ev.preventDefault();
-            }
-            
-            function drag(ev) {
-              ev.dataTransfer.setData("item", ev.target.getAttribute("data-item"));
-              ev.dataTransfer.setData("shoes", ev.target.getAttribute("shoes"));
-            }
-            
-            function dropShoes(e) {
-                e.preventDefault();
-                var itemName = e.dataTransfer.getData("item");
-
-                if (e.dataTransfer.getData("shoes") == "true") {
-                    e.target.setAttribute("equipped", itemName);
-                }
-            }
-        </script>
     </head>
     <body>
         <div class="game">
@@ -56,13 +35,15 @@
                     </div>
                 </div>
                 <div class="inventory-tab">
-                    <div id="shoes" ondrop="dropShoes(event)" ondragover="allowDrop(event)" style="height: 69px; background-color: blue;"></div>
+                    <div id="inventory-slots">
+                    </div>
 
-                    <div id="equipmentList">
+                    <div id="inventory-list">
                     </div>
                 </div>
             </div>
         </div>
+        <script src="./scripts/equipment.js"></script>
         <script src="./scripts/game.js"></script>
         <script src="./scripts/achievements.js"></script>
         <script src="./scripts/objects.js"></script>
