Re-located Achievements Tab
The achievements are now displayed in the top-left corner, sharing the tab with messages.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
     <body>
         <div class="game">
             <div class="game-board">
-                <div id="messages">
-                    <p class="tab-header">Messages</p>
+                <div>
+                    <div id='achievements'>
+                        <p class="tab-header">Achievements</p>
+                    </div>
+
+                    <div id="messages">
+                        <p class="tab-header">Messages</p>
+                    </div>
                 </div>
             
                 <div id="map">
