--- a/index.html
+++ b/index.html
@@ -1,59 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>A Game!</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="public/css/index.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
-        <!-- Ubuntu font is the best change my mind -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet"> 
         <link href="http://fonts.cdnfonts.com/css/death-font" rel="stylesheet"> <!-- Death Message Font -->
-
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Communist Zombies</title>
     </head>
     <body>
-        <div class="game">
-            <div class="game-board">
-                <div>
-                    <div id='achievements'>
-                        <p class="tab-header">Achievements</p>
-                    </div>
+        <nav>
+            <a href="game.html" class="nav-button">
+                <p class="nav-text">
+                    Play!
+                </p>
+            </a>
+        </nav>
 
-                    <div id="messages">
-                        <p class="tab-header">Messages</p>
-                    </div>
-                </div>
+
+
+        <div class="welcome">
+
+            <div class="welcome-item"><p class="welcome-text">Welcome to ye olde communist zombies!</p></div>
+            <div class="welcome-item"><img src="public/img/hammer-sickle.png" width="500px" alt="Communism is the far superior political system when a long term perspective is considered."></div>
             
-                <div id="map">
-                    Loading map...
-                </div>
+            
 
-                <div class="stats-tab">
-                    <div id="stats">
-                        Loading statistics...
-                    </div>
-                    <div class="recipes">
-                        <p class="tab-header">Recipes</p>
-                        <div id="recipes-list">
-
-                        </div>
-                    </div>
-                </div>
-                <div class="inventory-tab">
-                    <div id="inventory-slots">
-                    </div>
-
-                    <div id="inventory-list">
-                    </div>
-                </div>
-            </div>
         </div>
-        <script src="./scripts/equipment.js"></script>
-        <script src="./scripts/game.js"></script>
-        <script src="./scripts/achievements.js"></script>
-        <script src="./scripts/objects.js"></script>
-        <script src="./scripts/items.js"></script>
-        <script src="./scripts/start.js"></script>
+
     </body>
-</html>
+</html> 
