--- a/game.html
+++ b/game.html
@@ -3,6 +3,7 @@
         <title>A Game!</title>
         <link rel="stylesheet" href="public/css/game.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+        <link rel="icon" href=".\zombie_icon.png">
 
         <!-- Ubuntu font is the best change my mind -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
